# cec-assignment

./: .gitignore  DEMO-INSTRUCTIONS.md  Dockerfile  README.md  default.nix  docker-compose.services.yml  docker-compose.to.yml  flake.nix  shell.nix
database/ddl/: demo.sql  init.sql
event-hash/src/: lib.rs
experiment-producer/: Cargo.toml
experiment-producer/log-queries/: get-experiment-temperature.sh  get-experiments.sh  producer-events.sh
experiment-producer/src/: config.rs  events.rs  main.rs  metric.rs  simulator.rs
notifications-service/: Cargo.toml  ca.crt
notifications-service/src/: jwt.rs
notifier/: Cargo.toml
notifier/src/: consume.rs  main.rs
observability/: create_users.sh  delete_users.sh  docker-compose.yml  error_overview.json  group_personal.json  group_view.json  overview.json  prometheus-config.yml
production-rate/: pyproject.toml
production-rate/src/: __init__.py  visualise.py
scripts/: generate-group-tokens.sh
