[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "prometheus-client>=0.22.1",
    "requests>=2.32.5",
    "streamlit>=1.49.0",
]

[project.scripts]
production-rate = "src:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
